<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter or Select City Name"
        android:textSize="18sp"
        android:paddingBottom="10dp"/>

    <AutoCompleteTextView
        android:id="@+id/cityAutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="City Name"
        android:inputType="text"/>

    <Button
        android:id="@+id/addCityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add City"
        android:layout_marginTop="20dp"/>
</LinearLayout>
